# image-renderer

./: Cargo.toml  README.md
image-renderer/: Cargo.toml
image-renderer/src/: lib.rs  main.rs
image-renderer/tests/: test_lib.rs
