[package]
name = "image-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4"
image = "0.13.0"
crossbeam = "0.8"

[build-dependencies]
clippy = { version = "*", optional = true }
rustc_tools_util = { version = "0.4.0", optional = true }

[dev-dependencies]
cargo_metadata = "0.18.1"
toml = "0.5.11"
